# Maily

./: .env.example  Cargo.toml  README.md  build.rs
.github/workflows/: docker-publish.yml
proto/: maily.proto
server/: server.rs
src/: client.rs  server.rs  smtp.rs
