[package]
name = "Maily"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true

[dependencies]
tonic = { version = "0.9.2", features = [ "tls", "gzip" ] }
tokio = { version = "1.28.2", features = [ "rt-multi-thread", "time", "fs", "macros", "net" ] }
prost = "0.12.1"
prost-types = "0.11.9"

lettre = "0.10.4"
anyhow = "1.0.71"
dotenv = "0.15.0"

[build-dependencies]
tonic-build = { version = "0.9.2", features = [ "prost" ] }